--- a/openbox/dark/etc/skel/.config/lxterminal/lxterminal.conf
+++ b/openbox/dark/etc/skel/.config/lxterminal/lxterminal.conf
@@ -1,5 +1,5 @@
 [general]
-fontname=Droid Sans Mono 8
+fontname=Droid Sans Mono 10
 selchars=-A-Za-z0-9,./?%&#:_
 scrollback=1000
 bgcolor=#111111111111
@@ -10,8 +10,8 @@ cursorblinks=false
 cursorunderline=false
 audiblebell=false
 tabpos=top
-hidescrollbar=true
-hidemenubar=true
+hidescrollbar=false
+hidemenubar=false
 hideclosebutton=false
 disablef10=false
 disablealt=false
